syntax = "proto3";

package org.volunteered.libs.organization.v1;

option java_multiple_files = true;
option java_outer_classname = "OrganizationServiceProto";
option java_package = "org.volunteered.libs.organization.v1";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "validate/validate.proto";
import "org/volunteered/libs/proto/common/v1/common.proto";

service OrganizationService {
  rpc CreateOrganization(CreateOrganizationRequest) returns (org.volunteered.libs.proto.common.v1.Organization);
  rpc CreateOrganizationSubsidiary(CreateOrganizationSubsidiaryRequest)
      returns (org.volunteered.libs.proto.common.v1.OrganizationSubsidiary);
  rpc GetOrganizationById(GetOrganizationRequest) returns (org.volunteered.libs.proto.common.v1.Organization);
  rpc GetOrganizationSubsidiaryById(GetOrganizationSubsidiaryRequest) returns (org.volunteered.libs.proto.common.v1.OrganizationSubsidiary);
  rpc UpdateOrganization(UpdateOrganizationRequest) returns (org.volunteered.libs.proto.common.v1.Organization);
  rpc UpdateOrganizationSubsidiary(org.volunteered.libs.proto.common.v1.OrganizationSubsidiary)
      returns (org.volunteered.libs.proto.common.v1.OrganizationSubsidiary);
  rpc DeleteOrganization(DeleteOrganizationRequest) returns (google.protobuf.Empty);
  rpc DeleteOrganizationSubsidiary(DeleteOrganizationSubsidiaryRequest) returns (google.protobuf.Empty);
}

message CreateOrganizationRequest {
  int64 creator_id = 1;
  string name = 2;
  string email = 3 [(validate.rules).string.email = true];
  string bio = 4;
  string city = 5;
  string country = 6 [(validate.rules).string = {len: 2}];
}

message CreateOrganizationSubsidiaryRequest {
  int64 creator_id = 1;
  int64 organization_id = 2;
  org.volunteered.libs.proto.common.v1.OrganizationSubsidiary subsidiary = 3;
}

message GetOrganizationRequest {
  int64 id = 1;
}

message DeleteOrganizationRequest {
  int64 id = 1;
}

message GetOrganizationSubsidiaryRequest {
  int64 id = 1;
}

message DeleteOrganizationSubsidiaryRequest {
  int64 id = 1;
}


message UpdateOrganizationRequest {
  int64 id = 1;
  string name = 2;
  string email = 3 [(validate.rules).string.email = true];
  string bio = 4;
  string logo = 5;
  string phone = 6;
  org.volunteered.libs.proto.common.v1.WebsiteAndSocialMediaUrls web_and_social_urls = 7;
  int32 founded = 8;
  string industry = 9;
  string founder = 10;
  int32 number_of_employees = 11;
  repeated string benefits = 12;
}
